--- a/gpuTransformation.html
+++ b/gpuTransformation.html
@@ -82,48 +82,54 @@
 
         window.addEventListener('keydown', (event) => {
             if (event.key === 'ArrowLeft') {
-                direction.x = -1;
+            direction.x = -1; // เคลื่อนที่ไปทางซ้าย
             } else if (event.key === 'ArrowRight') {
-                direction.x = 1;
+            direction.x = 1; // เคลื่อนที่ไปทางขวา
             } else if (event.key === 'ArrowUp') {
-                direction.y = 1;
+            direction.y = 1; // เคลื่อนที่ขึ้น
             } else if (event.key === 'ArrowDown') {
-                direction.y = -1;
+            direction.y = -1; // เคลื่อนที่ลง
             } else if (event.key === 'a') {
-                scale += 0.5;
+            scale += 0.5; // เพิ่มขนาด
             } else if (event.key === 'd') {
-                scale = Math.max(0.1, scale - 0.5);
+            scale = Math.max(0.1, scale - 0.5); // ลดขนาด แต่ไม่ให้ต่ำกว่า 0.1
             } else if (event.key === 'w') {
-                direction.z = 1;
+            direction.z = 1; // เคลื่อนที่ไปข้างหน้า
             } else if (event.key === 's') {
-                direction.z = -1;
+            direction.z = -1; // เคลื่อนที่ไปข้างหลัง
             } else if (event.key === '1') {
-                rotationSpeed = 0.01; // ลดความเร็ว
+            rotationSpeed = 0.01; // ลดความเร็ว
             } else if (event.key === '2') {
-                rotationSpeed += 0.01; // เพิ่มความเร็ว
+            rotationSpeed += 0.01; // เพิ่มความเร็ว
             } else if (event.key === '3') {
-                rotationSpeed = 0.01 + Math.random() * 0.09; // สุ่ม
+            rotationSpeed = 0.01 + Math.random() * 0.09; // สุ่ม
+            } else if (event.key === '0') {
+            // รีเซ็ตกลับไปเริ่มต้น
+            cube.position.set(0, 0, 0);
+            cube.scale.set(1, 1, 1);
+            scale = 1;
+            rotationSpeed = 0.01;
             } else if (['4','5','6','7','8','9'].includes(event.key)) {
-                // ปรับขนาดแกนตามเลขที่กด
-                const val = parseInt(event.key) - 3; // 4=1, 5=2, ...
-                if (event.key === '4') cube.scale.x += val * 0.1;
-                if (event.key === '5') cube.scale.y += val * 0.1;
-                if (event.key === '6') cube.scale.z += val * 0.1;
-                if (event.key === '7') cube.scale.x = Math.max(0.1, cube.scale.x - val * 0.1);
-                if (event.key === '8') cube.scale.y = Math.max(0.1, cube.scale.y - val * 0.1);
-                if (event.key === '9') cube.scale.z = Math.max(0.1, cube.scale.z - val * 0.1);
+            // ปรับขนาดแกนตามเลขที่กด
+            const val = parseInt(event.key) - 3; // 4=1, 5=2, ...
+            if (event.key === '4') cube.scale.x += val * 0.1; // เพิ่มขนาดแกน x
+            if (event.key === '5') cube.scale.y += val * 0.1; // เพิ่มขนาดแกน y
+            if (event.key === '6') cube.scale.z += val * 0.1; // เพิ่มขนาดแกน z
+            if (event.key === '7') cube.scale.x = Math.max(0.1, cube.scale.x - val * 0.1); // ลดขนาดแกน x
+            if (event.key === '8') cube.scale.y = Math.max(0.1, cube.scale.y - val * 0.1); // ลดขนาดแกน y
+            if (event.key === '9') cube.scale.z = Math.max(0.1, cube.scale.z - val * 0.1); // ลดขนาดแกน z
             }
         });
 
         window.addEventListener('keyup', (event) => {
             if (event.key === 'ArrowLeft' || event.key === 'ArrowRight') {
-                direction.x = 0;
+            direction.x = 0;
             }
             if (event.key === 'ArrowUp' || event.key === 'ArrowDown') {
-                direction.y = 0;
+            direction.y = 0;
             }
             if (event.key === 'w' || event.key === 's') {
-                direction.z = 0;
+            direction.z = 0;
             }
         });
 
@@ -136,7 +142,7 @@
 
             // Scale cube (ถ้าไม่ปรับแกน ใช้ scale ปกติ)
             if (cube.scale.x === cube.scale.y && cube.scale.y === cube.scale.z) {
-                cube.scale.set(scale, scale, scale);
+            cube.scale.set(scale, scale, scale);
             }
 
             // Rotation (ใช้ rotationSpeed)
