--- a/gpuTransformation.html
+++ b/gpuTransformation.html
@@ -82,45 +82,39 @@
 
         window.addEventListener('keydown', (event) => {
             if (event.key === 'ArrowLeft') {
-            direction.x = -1; // เคลื่อนที่ไปทางซ้าย
+            direction.x = -1;
             } else if (event.key === 'ArrowRight') {
-            direction.x = 1; // เคลื่อนที่ไปทางขวา
+            direction.x = 1;
             } else if (event.key === 'ArrowUp') {
-            direction.y = 1; // เคลื่อนที่ขึ้น
+            direction.y = 1;
             } else if (event.key === 'ArrowDown') {
-            direction.y = -1; // เคลื่อนที่ลง
+            direction.y = -1;
             } else if (event.key === 'a') {
-            // เพิ่มขนาด
-            if (['4','5','6','7','8','9'].includes(lastScaleKey)) {
-                const val = parseInt(lastScaleKey) - 3;
-                if (lastScaleKey === '4') cube.scale.x += val * 0.1;
-                if (lastScaleKey === '5') cube.scale.y += val * 0.1;
-                if (lastScaleKey === '6') cube.scale.z += val * 0.1;
-            } else {
-                scale += 0.5;
-            }
+            cube.scale.x += 0.5;
+            cube.scale.y += 0.5;
+            cube.scale.z += 0.5;
             } else if (event.key === 'd') {
-            // ลดขนาด แต่ไม่ให้ต่ำกว่า 0.1
-            if (['7','8','9'].includes(lastScaleKey)) {
-                const val = parseInt(lastScaleKey) - 3;
-                if (lastScaleKey === '7') cube.scale.x = Math.max(0.1, cube.scale.x - val * 0.1);
-                if (lastScaleKey === '8') cube.scale.y = Math.max(0.1, cube.scale.y - val * 0.1);
-                if (lastScaleKey === '9') cube.scale.z = Math.max(0.1, cube.scale.z - val * 0.1);
-            } else {
-                scale = Math.max(0.1, scale - 0.5);
-            }
+            cube.scale.x = Math.max(0.1, cube.scale.x - 0.5);
+            cube.scale.y = Math.max(0.1, cube.scale.y - 0.5);
+            cube.scale.z = Math.max(0.1, cube.scale.z - 0.5);
             } else if (event.key === 'w') {
-            direction.z = 1; // เคลื่อนที่ไปข้างหน้า
+            direction.z = 1;
             } else if (event.key === 's') {
-            direction.z = -1; // เคลื่อนที่ไปข้างหลัง
+            direction.z = -1;
             } else if (event.key === '1') {
-            rotationSpeed = 0.01; // ลดความเร็ว
+            rotationSpeed = 0.01;
             } else if (event.key === '2') {
-            rotationSpeed += 0.01; // เพิ่มความเร็ว
+            rotationSpeed += 0.01;
             } else if (event.key === '3') {
-            rotationSpeed = 0.01 + Math.random() * 0.09; // สุ่ม
+            rotationSpeed = 0.01 + Math.random() * 0.09;
             } else if (['4','5','6','7','8','9'].includes(event.key)) {
-            lastScaleKey = event.key; // จำ key ล่าสุดที่ใช้ปรับขนาดแกน
+            const val = parseInt(event.key) - 3;
+            if (event.key === '4') cube.scale.x += val * 0.1;
+            if (event.key === '5') cube.scale.y += val * 0.1;
+            if (event.key === '6') cube.scale.z += val * 0.1;
+            if (event.key === '7') cube.scale.x = Math.max(0.1, cube.scale.x - val * 0.1);
+            if (event.key === '8') cube.scale.y = Math.max(0.1, cube.scale.y - val * 0.1);
+            if (event.key === '9') cube.scale.z = Math.max(0.1, cube.scale.z - val * 0.1);
             }
         });
 
@@ -134,12 +128,7 @@
             if (event.key === 'w' || event.key === 's') {
             direction.z = 0;
             }
-            if (['4','5','6','7','8','9'].includes(event.key)) {
-            lastScaleKey = null;
-            }
         });
-
-        let lastScaleKey = null;
 
         // ✅ render loop
         function animate(t) {
@@ -147,11 +136,6 @@
             cube.position.x += direction.x * 0.05;
             cube.position.z -= direction.y * 0.05;
             cube.position.y += direction.z * 0.05;
-
-            // Scale cube (ถ้าไม่ปรับแกน ใช้ scale ปกติ)
-            if (cube.scale.x === cube.scale.y && cube.scale.y === cube.scale.z) {
-            cube.scale.set(scale, scale, scale);
-            }
 
             // Rotation (ใช้ rotationSpeed)
             cube.rotation.x = t * rotationSpeed;
