--- a/gpuMeshFile.html
+++ b/gpuMeshFile.html
@@ -70,7 +70,7 @@
 
         // ✅ โหลดโมเดล OBJ
         const loader = new THREE.OBJLoader();
-        loader.load('https://hlangkaa.github.io/ICG/3D-Model/model-1.obj', function (object) {
+        loader.load('https://hlangkaa.github.io/ICG/3D-Model/Chair.obj', function (object) {
             object.castShadow = true; // ✅ วัตถุนี้สร้างเงา
             // ตั้งค่า castShadow กับทุก mesh ใน object
             object.traverse(function (child) {
